--- a/task2-4/index2.html
+++ b/task2-4/index2.html
@@ -66,7 +66,7 @@
                         <button class="accordion">Section 1</button>
                         <div class="panel">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <p onclick="document.getElementById('section1').style.display='none'">Click to Remove</p>
+                            <span class="removetext" onclick="document.getElementById('section1').style.display='none'">Click to Remove</span>
                         </div>
                     </div>
                     <div id="section2">
@@ -74,21 +74,21 @@
                         <div class="panel">
                             <p>Sed felis arcu, vestibulum vitae sollicitudin sed, euismod eget ipsum.</p>
                             <p>Nulla ipsum purus, egestas sit amet mauris sed, molestie ultricies est. Fusce viverra viverra nisl sed cursus. Praesent sit amet feugiat quam. Donec at varius quam.</p>
-                            <p onclick="document.getElementById('section2').style.display='none'">Click to Remove</p>
+                            <span class="removetext" onclick="document.getElementById('section2').style.display='none'">Click to Remove</span>
                         </div>
                     </div>
                     <div id="section3">
                         <button class="accordion">Section 3</button>
                         <div class="panel">
                             <p>Etiam quis elit malesuada, imperdiet dolor vitae, pellentesque sem. Quisque rhoncus, metus eget hendrerit malesuada, sem mi pulvinar enim, sed ullamcorper eros tortor et diam.</p>
-                            <p onclick="document.getElementById('section3').style.display='none'">Click to Remove</p>
+                            <span class="removetext" onclick="document.getElementById('section3').style.display='none'">Click to Remove</span>
                         </div>
                     </div>
                     <div id="section4">
                         <button class="accordion">Section 4</button>
                         <div class="panel">
                             <p>Nulla a ultricies orci. Suspendisse efficitur lectus nec ex bibendum feugiat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam tempus sem et augue gravida placerat.</p>
-                            <p onclick="document.getElementById('section4').style.display='none'">Click to Remove</p>
+                            <span class="removetext" onclick="document.getElementById('section4').style.display='none'">Click to Remove</span>
                         </div>
                     </div>
                 </div>
