--- a/task2-4/index2.html
+++ b/task2-4/index2.html
@@ -42,7 +42,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-10 col-m-10">
+                <div class="col-5 col-m-10">
                     <article>
                         <h3>Article Heading 1</h3>
                         <p>Etiam quis elit malesuada, imperdiet dolor vitae, pellentesque sem. Quisque rhoncus, metus eget hendrerit malesuada, sem mi pulvinar enim, sed ullamcorper eros tortor et diam.
@@ -62,6 +62,9 @@
                             quam..
                         </p>
                     </article>
+                </div>
+
+                <div class="col-5 col-m-10">
                     <div id="section1">
                         <button class="accordion">Section 1</button>
                         <div class="panel">
@@ -93,18 +96,19 @@
                     </div>
                 </div>
             </div>
-            <footer>
-                <nav>
-                    <ul class="botnav">
-                        <li><a href=#>Link 1</a></li>
-                        <li><a href=#>Link 2</a></li>
-                        <li><a href=#>Link 3</a></li>
-                        <li><a href=#>link 4</a></li>
-                    </ul>
-                </nav>
-            </footer>
         </div>
-        <script src="scripts.js"></script>
+        <footer>
+            <nav>
+                <ul class="botnav">
+                    <li><a href=#>Link 1</a></li>
+                    <li><a href=#>Link 2</a></li>
+                    <li><a href=#>Link 3</a></li>
+                    <li><a href=#>link 4</a></li>
+                </ul>
+            </nav>
+        </footer>
+    </div>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
